--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   position: relative;
   height: 100vh;
   width: 100%;
-  background: url('Screenshot 2025-01-10 000213.png') no-repeat center center/cover;
+  background: url('Know right.png') no-repeat center center/cover;
   margin: 0;
   padding: 0;
 }
