--- a/style.css
+++ b/style.css
@@ -33,9 +33,8 @@ body {
 
 #chatbot-toggler {
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); /* Adjust for the size of the button */
+  bottom: 30px; /* Position at the bottom */
+  right: 35px;  /* Position to the right */
   border: none;
   height: 50px;
   width: 50px;
@@ -50,7 +49,7 @@ body {
 }
 
 body.show-chatbot #chatbot-toggler {
-  transform: translate(-50%, -50%) rotate(90deg);
+  transform: rotate(90deg);
 }
 
 #chatbot-toggler span {
