--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 }
 .homepage-image {
   max-width: 50%%;
-  height: 50%;
+  height: auto;
   border-radius: 10px;
   margin-bottom: 20px;
 }
